# rsapar

./: .gitignore  Cargo.toml  README.md  SECURITY.md  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
benches/: bench.rs
example/: convert_blocks.xml  data.txt  fixedwidth_data.txt  generate_sample_data.py  schema.xml
src/: convert.rs  decimal_format.rs  lib.rs  parser.rs  schema.rs
