[package]
name = "rsapar"
version = "0.1.0"
description = "RSaPar is a Rust library for schema-based parsing and validation of structured data files, inspired by JSaPar for Java."
authors = ["Guillermo Céspedes Tabárez <dev.dertin@gmail.com>"]
edition = "2021"
keywords =["schema", "parser", "csv", "fixed-width", "validation"]
categories = ["encoding", "parser-implementations"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dertin/rsapar"
documentation = "https://docs.rs/rsapar"
rust-version = "1.65.0"

[dependencies]
xml-rs="0.8.20"
crossbeam = "0.8.4"
anyhow = "1.0.81"
chrono = "0.4.37"
regex = "1.10.4"